--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -18,6 +15,9 @@
 .env.test.local
 .env.production.local
 
+/.eslintcache
+yarn.lock
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
