--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "jest tests/*.test.js"
   },
   "eslintConfig": {
