--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,9 @@
   "name": "Crypto Wallet",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "images/logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
     },
     {
       "src": "images/logo512.png",
