--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "jest tests/*.test.js"
+    "test:unit": "jest tests/unit/*.test.js",
+    "test:integration": "jest tests/integration/*.test.js",
+    "test:e2e": "jest tests/e2e/*.test.js"
   },
   "eslintConfig": {
     "extends": [
