--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "gh-pages": "3.1.0",
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "node-sass": "^4.14.1"
   }
 }
