--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test:unit": "jest tests/unit/*.test.js",
-    "test:integration": "jest tests/integration/*.test.js",
-    "test:e2e": "jest tests/e2e/*.test.js"
+    "test:unit": "jest tests/unit/*.test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +44,7 @@
   },
   "devDependencies": {
     "gh-pages": "3.2.0",
-    "jest": "26.6.3",
+    "jest": "^26.6.0",
     "node-sass": "^4.14.1"
   }
 }
