--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "13.1.9",
+    "bignumber.js": "^9.0.1",
     "bip32": "2.0.6",
     "bip39": "3.0.4",
     "bitcoinjs-lib": "5.2.0",
