--- a/package.json
+++ b/package.json
@@ -1,51 +1,23 @@
 {
-  "name": "crypto-wallet",
-  "version": "0.1.0",
-  "private": true,
-  "license": "MIT",
-  "homepage": "https://noteternal.github.io/cryptoWallet/",
-  "dependencies": {
-    "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "11.2.7",
-    "@testing-library/user-event": "13.1.9",
-    "bignumber.js": "^9.0.1",
-    "bip32": "2.0.6",
-    "bip39": "3.0.4",
-    "bitcoinjs-lib": "5.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "4.2.0",
-    "react-scripts": "4.0.3"
-  },
+  "name": "vite-template-solid",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test:unit": "jest tests/unit/*.test.js"
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "license": "MIT",
   "devDependencies": {
-    "gh-pages": "3.2.0",
-    "jest": "^26.6.0",
-    "node-sass": "^4.14.1"
+    "vite": "^2.5.1",
+    "vite-plugin-solid": "^2.0.3"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "crypto-js": "^4.1.1",
+    "solid-js": "^1.1.1",
+    "web3": "^1.5.3",
+    "zustand": "^3.5.10"
   }
 }
