--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/crypto-js": "^4.0.2",
     "vite": "^2.5.1",
     "vite-plugin-solid": "^2.0.3"
   },
