--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
+    "ethereumjs-wallet": "^1.0.1",
     "solid-js": "^1.1.1",
     "web3": "^1.5.3",
     "zustand": "^3.5.10"
