--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-template-solid",
+  "name": "wallet",
   "version": "0.0.0",
   "description": "",
+  "private": true,
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -19,6 +20,7 @@
     "bip39": "^3.0.4",
     "crypto-js": "^4.1.1",
     "ethereumjs-wallet": "^1.0.1",
+    "ethers": "^5.4.7",
     "solid-js": "^1.1.1",
     "web3": "^1.5.3"
   }
